--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <service
-                android:name=".FirstService"
-                android:enabled="true"
-                android:exported="true">
+
+        <service android:name=".FirstService"
+                 android:enabled="true"
+                 android:exported="true"
+                 android:process=":services" >
         </service>
 
         <activity android:name=".MainActivity">
